:fire: remove all old posts

--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,20 @@
 baseURL = 'https://krizsx.github.io'
-languageCode = 'en-us'
+languageCode = 'zh-CN'
 title = 'My New Hugo Site'
 theme = 'github-style'
 
 [params]
 author = "KrizsX"
-description = "In solitude, where we are least alone."
+description = "尽量不摆烂"
 github = "krizsx"
 email = "cb.kris.bj@gmail.com"
 url = "https://krizsx.github.io/"
+avatar = "/img/avator.jpeg"
 #   keywords = "blog, google analytics"
 #   rss = true
 lastmod = true
 userStatusEmoji = "👻"
-#   favicon = "/images/github.png"
+# favicon = "/images/avator.jpeg"
 #   location = "China"
 #   enableGitalk = true
 
